Fix alignment of right column popular questions

--- a/app/assets/stylesheets/modules/home.sass
+++ b/app/assets/stylesheets/modules/home.sass
@@ -101,7 +101,7 @@
       border: none
       background:
         image: url(/assets/mag_glass@2x.png)
-        repeat: no-repeat 
+        repeat: no-repeat
         position: center center
         size: 18px
       box-shadow: none
@@ -326,3 +326,6 @@
       text-align: left
       @include RobotoRegular()
       line-height: 1.5em
+
+ul.match-left-top-margin
+  margin-top: 30px
